<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SearchFragment">



    <ImageView
        android:id="@+id/photo_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img" />

    <Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/LandPay"
        android:background="@color/orange"
        android:titleTextColor="@color/white"
        />
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rectangle_layout"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivIconSearch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/search_empty" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="40dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tLayoutSalary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/salary"
            app:boxStrokeColor="@color/dark_blue"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/dollar"
            app:startIconTint="@color/darker_gray"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:minHeight="48dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearch"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"

            android:backgroundTint="@color/orange"
            android:shadowColor="@color/black"
            android:text="@string/search"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

    </LinearLayout>

</RelativeLayout>